# dusk-zerocaf

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js  telegram_notification.sh
benchmarks/: dusk_benchmarks.rs
docs/: Curve criteria  Safe Curve criteria  ieeeconf.cls  lit.bib  main.tex
examples/: basic_ops.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/subtle/: trait.ConditionallySelectable.js  trait.ConstantTimeEq.js
sage_codes/: LFACTOR_comp  Point computation   Safe Curve code  curve_derivation  derive.sage  derive.sage   sage_weierstrass_code
src/: constants.rs  edwards.rs  field.rs  lib.rs  montgomery.rs  ristretto.rs  scalar.rs  traits.rs  weierstrass.rs
src/backend/: mod.rs
src/backend/u64/: constants.rs  field.rs  mod.rs  scalar.rs
src/zerocaf/: constants.rs.html  edwards.rs.html  field.rs.html  lib.rs.html  montgomery.rs.html  ristretto.rs.html  scalar.rs.html  traits.rs.html
src/zerocaf/backend/: mod.rs.html
tools/: Cargo.toml  Phase1_Rust_logs  Phase1_py_logs  kalinski_inv.py  phase2_py_logs  phase2_rust_logs  tonelli.py
tools/src/: logs  main.rs
zerocaf/: all.html  index.html  sidebar-items.js
zerocaf/backend/: index.html  sidebar-items.js
zerocaf/backend/u64/: index.html  sidebar-items.js
zerocaf/constants/: constant.BASEPOINT_COMPRESSED.html  constant.RISTRETTO_BASEPOINT_COMPRESSED.html  index.html  sidebar-items.js
zerocaf/edwards/: fn.binary_naf_mul.html  fn.double_and_add.html  fn.ltr_bin_mul.html  fn.mul_by_cofactor.html  fn.mul_by_pow_2.html  fn.window_naf_mul.html  index.html  sidebar-items.js  struct.AffinePoint.html  struct.CompressedEdwardsY.html  struct.EdwardsPoint.html  struct.ProjectivePoint.html
zerocaf/field/: index.html  sidebar-items.js  type.FieldElement.html
zerocaf/montgomery/: index.html  struct.MontgomeryPoint.html
zerocaf/ristretto/: index.html  sidebar-items.js  struct.CompressedRistretto.html  struct.RistrettoPoint.html
zerocaf/scalar/: index.html  sidebar-items.js  type.Ristretto255Scalar.html  type.Scalar.html
zerocaf/traits/: index.html  sidebar-items.js  trait.Identity.html  trait.ValidityCheck.html
zerocaf/traits/ops/: index.html  sidebar-items.js  trait.Double.html  trait.Half.html  trait.InvSqrt.html  trait.ModSqrt.html  trait.Pow.html  trait.SqrtRatioI.html  (+1 more)
(+40 files in other folders)
