[package]
name = "zerocaf"
version = "0.1.1"
authors = ["Luke Pearson <luke@dusk.network>", 
           "CPerezz <carlos@dusk.network>"]
readme = "README.md"
documentation = "https://dusk-network.github.io/dusk-zerocaf/zerocaf/index.html"
repository = "https://github.com/dusk-network/Dusk-Zerocaf"
keywords = ["cryptography", "ristretto", "doppio-curve", "ECC"]
categories =["Algorithms", "Cryptography", "Development tools"]
description = "A pure-Rust implementation of elliptic curve operations over the Doppio-curve"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "**/tools",
    "**/sage_codes",
    "**/examples"
]
license = "MIT"
edition = "2018"

[dependencies]
subtle = { version = "2", default-features = false }
num = "0.2.0"
curve25519-dalek = "1.1.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.7.0"


# Criterion benchmarks
[[bench]]
path = "./benchmarks/dusk_benchmarks.rs"
name = "dusk_benchmarks"
harness = false


[features]
nightly = ["subtle/nightly"]
# The u64 backend uses u64s with u128 products.
u64_backend = []
default = ["u64_backend"]




